# tasajusta

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.es.md  README.md  docker-compose.yml  env.example  lambda.Dockerfile  pyproject.toml  requirements-lambda.txt  requirements-train.txt
.claude/: settings.local.json
.github/workflows/: deploy-lambda.yml  etl-dolar.yml  etl-kavak.yml  etl-ml-autos.yml  etl-vehiculos.yml  retrain.yml
api/: agent_tools.py  lambda_handler.py  main.py  schemas.py
api/routes/: agent.py  metrics.py  predict.py
docs/: guion-notebooklm.md  learn.md  modo-aprendizaje.md  setup-inicial.md  tasajusta-plan.md
etl/: extract_dolar.py  extract_ml_autos.py  gold_autos.py  infra.py  lambda_etl_ml.py  lambda_kavak.py  load_autos.py  load_dolar.py  pipeline.py  scrape_deruedas.py  scrape_kavak.py  transform_autos.py  transform_dolar.py  transform_kavak.py  transform_ml_autos.py
infra/bootstrap/: main.tf
infra/main/: apigateway.tf  ecr.tf  github_oidc.tf  iam.tf  lambda.tf  lambda_etl.tf  lambda_kavak.tf  outputs.tf  provider.tf  s3.tf  variables.tf
ml/: evaluate.py  score_autos.py  train_lgbm.py  train_mlp.py
requirements/: etl.txt  lambda.txt
tests/: conftest.py  test_extract_dolar.py  test_load_autos.py  test_load_dolar.py  test_pipeline.py  test_transform_dolar.py
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/app/api/agent/: route.ts
web/app/api/predict/: route.ts
web/app/components/: AgentChat.tsx  AutosTable.tsx  DolarSection.tsx  OportunidadesSection.tsx  PredictForm.tsx  ThemeToggle.tsx  VehiculosSection.tsx
web/lib/: supabase.ts
