[project]
name = "tasajusta"
version = "0.1.0"
description = "Plataforma de inteligencia de precios de autos usados en Argentina"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "boto3>=1.34",
    "polars>=0.20",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",       # linter + formatter
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E/F = errores básicos, I = imports ordenados
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
