[project]
name = "tasajusta"
version = "0.1.0"
description = "Plataforma de inteligencia de precios de autos usados en Argentina"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "boto3>=1.34",
    "polars>=0.20",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    # ML
    "pandas>=2.0",
    "pyarrow>=15.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.5",
    # API
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "groq>=0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.4",       # linter + formatter
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
ml = [
    "torch>=2.0",      # solo para train_mlp.py (MLP comparison baseline)
]
tracking = [
    "mlflow>=2.14",    # experiment tracking — local only, not needed in Lambda
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E/F = errores básicos, I = imports ordenados
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Agrega el root del proyecto a sys.path para que `import etl` funcione
pythonpath = ["."]
